<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <project_version>1.3.3</project_version>

    <jersey.version>2.40</jersey.version>

    <javax.javaee.version>7.0</javax.javaee.version>
    <servlet.version>3.0.1</servlet.version>
    <elasticsearch.version>7.17.24</elasticsearch.version>
    <solr.version>8.11.4</solr.version>
    <cassandra.version>4.18.1</cassandra.version>
    <saxon.version>10.2</saxon.version>
    <httpclient.version>4.5.14</httpclient.version>
    <log4j.version>2.17.2</log4j.version>
    <jackson.version>2.17.1</jackson.version>
    <jaxb.api.version>2.3.1</jaxb.api.version>
    <jaxb.runtime.version>2.3.9</jaxb.runtime.version>
    <jakarta.version>1.2.1</jakarta.version>
    <gremlin.version>3.4.13</gremlin.version>
    <commons.lang.version>3.17.0</commons.lang.version>
    <commons.pool2.version>2.8.0</commons.pool2.version>
    <activation.version>1.1.1</activation.version>

    <junit.version>4.13.2</junit.version>
    <mockito.version>5.14.2</mockito.version>
    <swagger.version>1.6.14</swagger.version>

    <maven.properties.version>1.2.1</maven.properties.version>
    <maven.compiler.version>3.13.0</maven.compiler.version>
    <maven.war.version>3.4.0</maven.war.version>
    <maven.failsafe.version>2.22.2</maven.failsafe.version>
    <maven.jetty.version>9.4.19.v20190610</maven.jetty.version>
    <maven.dependency.version>3.6.1</maven.dependency.version>
    <maven.dependency-analyzer.version>1.11.1</maven.dependency-analyzer.version>
    <maven.license.version>2.0.0</maven.license.version>

    <java.version>17</java.version>

    <dependencyCheckSuppressionFile>src/test/resources/suppress.xml</dependencyCheckSuppressionFile>

    <!-- Artifacts -->
    <artifacts.snapshots.url>https://dev.fiz-karlsruhe.de/artifactory/libs-snapshot-local</artifacts.snapshots.url>
    <artifacts.releases.url>https://dev.fiz-karlsruhe.de/artifactory/libs-release-local</artifacts.releases.url>
  </properties>

  <groupId>de.fiz.oai.backend</groupId>
  <artifactId>oai-backend</artifactId>
  <version>${project_version}</version>
  <packaging>war</packaging>

  <name>oai-backend</name>

  <parent>
    <groupId>de.fiz.iee</groupId>
    <artifactId>common</artifactId>
    <version>develop-SNAPSHOT</version>
  </parent>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>${servlet.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.cassandra</groupId>
      <artifactId>java-driver-core</artifactId>
      <version>${cassandra.version}</version>
      <exclusions>

        <exclusion>
          <groupId>com.esri.geometry</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.tinkerpop</groupId>
      <artifactId>gremlin-core</artifactId>
      <version>${gremlin.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons.lang.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet-core</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.test-framework</groupId>
      <artifactId>jersey-test-framework-core</artifactId>
      <version>${jersey.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.test-framework.providers</groupId>
      <artifactId>jersey-test-framework-provider-jetty</artifactId>
      <version>${jersey.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-multipart</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>${activation.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>${jaxb.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>${jaxb.runtime.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.activation</groupId>
      <artifactId>jakarta.activation</artifactId>
      <version>${jakarta.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>elasticsearch-rest-high-level-client</artifactId>
      <version>${elasticsearch.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.solr</groupId>
      <artifactId>solr-solrj</artifactId>
      <version>${solr.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-pool2</artifactId>
      <version>${commons.pool2.version}</version>
    </dependency>


    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${log4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>net.sf.saxon</groupId>
      <artifactId>Saxon-HE</artifactId>
      <version>${saxon.version}</version>
    </dependency>

    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-jersey2-jaxrs</artifactId>
      <version>${swagger.version}</version>
    </dependency>


  </dependencies>

  <build>
    <finalName>oai-backend</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <excludes>
          <exclude>solr/**</exclude>
          <exclude>xsd/**</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>


      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>${maven.properties.version}</version>
        <executions>
          <execution>
            <phase>generate-resources</phase>
            <goals>
              <goal>write-project-properties</goal>
            </goals>
            <configuration>
              <outputFile>
                ${project.build.directory}/maven.properties
              </outputFile>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>${maven.war.version}</version>
        <configuration>
          <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
          <attachClasses>true</attachClasses>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>

            </manifest>
          </archive>
        </configuration>
      </plugin>


      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven.failsafe.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
          <includes>
            <include>de.fiz.oai.backend.integration.*IT.java</include>
          </includes>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>${maven.jetty.version}</version>
        <configuration>
          <httpConnector>
            <port>8999</port>
          </httpConnector>
          <stopKey>quit</stopKey>
          <stopPort>9000</stopPort>
          <war>${project.basedir}/target/oai-backend.war</war>
        </configuration>
      </plugin>



      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${maven.dependency.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-dependency-analyzer</artifactId>
            <version>${maven.dependency-analyzer.version}</version>
          </dependency>
        </dependencies>
      </plugin>


      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${maven.license.version}</version>
        <executions>
          <execution>
            <id>default-cli</id>
            <configuration>
              <licenseMerges>
                <licenseMerge>The Apache Software License, Version 2.0|Apache License, Version 2.0|Apache Public License 2.0</licenseMerge>
              </licenseMerges>

            </configuration>
          </execution>
        </executions>
        <configuration>
          <excludedScopes>test</excludedScopes>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <snapshotRepository>
      <id>ecs-marep</id>
      <name>ecs-marep</name>
      <uniqueVersion>true</uniqueVersion>
      <url>${artifacts.snapshots.url}</url>
    </snapshotRepository>
    <repository>
      <id>ecs-marep</id>
      <name>ecs-marep</name>
      <uniqueVersion>false</uniqueVersion>
      <url>${artifacts.releases.url}</url>
    </repository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>ecs-marep</id>
      <url>https://dev.fiz-karlsruhe.de/artifactory/repo</url>
    </repository>
  </repositories>
</project>
